# prod-quad

./: CMakeLists.txt  Doxyfile
docs/html/: _form0_tmp.epsi  _form0_tmp.ps  _formulas.dvi  _formulas.tex  bool_8h.html  bool_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  double__utils_8c.html  double__utils_8h.html  double__utils_8h_source.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  main_8c.html  safeio_8c.html  safeio_8h.html  safeio_8h_source.html  solver_8c.html  solver_8h.html  solver_8h_source.html  test__double__utils_8c.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js  variables_1.js
include/: bool.h  double_utils.h  solver.h
src/: double_utils.c  main.c  solver.c  test_double_utils.c  test_solver.c
